# pycontrails

./: '  .flake8  .gitignore  .nb-test.cfg  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  RELEASE.md  black_ruff  boxm.py  boxm_benchmark.py  boxm_for.f90  chem.py  init_chem.py  meta.yaml  newBOXMODEL.IN  newBOXMODEL1.for  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yaml  benchmark.yml  bump_version.py  docs.yaml  doctest.yaml  nbtest.yaml  release.yaml  scorecard.yaml  test-status.yaml  test.yaml  test.yml  testpypi-release.yaml
cache/test/: file.md
docs/: README.md  api.rst  changelog.rst  conf.py  develop.rst  examples.rst  flight.rst  index.rst  install.rst  literature.rst  meteorology.rst  models.rst  nb-test.cfg  notebooks.rst  observations.rst  references.rst  tutorials.rst  utilities.rst
docs/_static/: pycontrails.bib
docs/_static/css/: style.css
docs/examples/: ACCF.ipynb  AircraftPerformance.ipynb  Cache.ipynb  CoCiP.ipynb  ECMWF.ipynb  FDR.ipynb  Flight.ipynb  GFS.ipynb  GOES.ipynb  ISSR.ipynb  Meteorology.ipynb  SAC.ipynb  accf.ipynb  airports.ipynb  cache.ipynb  flight2.csv  flightplan.ipynb
docs/getting-started/: install.rst
docs/integrations/: ACCF.ipynb  APCEMM.ipynb  GoogleForecast.ipynb
docs/notebooks/: ARCO-ERA5.ipynb  AircraftPerformance.ipynb  Cache.ipynb  CoCiP.ipynb  CoCiPGrid.ipynb  ECMWF.ipynb  FDR.ipynb  Flight.ipynb  GFS.ipynb  GOES.ipynb  GRUAN.ipynb  GoogleForecast.ipynb  ICON.ipynb  ISSR.ipynb  Landsat.ipynb  Meteorology.ipynb  SAC.ipynb  Sentinel.ipynb  adsb-flight-loading.ipynb  airports.ipynb  flightplan.ipynb  model-levels.ipynb  run-cocip-on-flight.ipynb  run-cocip-with-fdr.ipynb  specific-humidity-interpolation.ipynb
docs/notebooks/data/: .gitignore  fdr.csv  flight-noisy.csv  iagos-flight-landsat.csv  iagos-flight-sentinel.csv
docs/reference/: api.rst  changelog.rst  references.rst
docs/tutorials/: CoCiP.ipynb  data.rst  datalib.rst  flight.csv  interpolating-specific-humidity.ipynb  models.rst
docs/tutorials/cocip/: CoCiP-tutorial.ipynb
docs/tutorials/notebooks/: CoCiP.ipynb  CocipGrid.ipynb  Flight.ipynb  Meteorology.ipynb  README.md  accf.ipynb  ecmwf.ipynb  flight.csv
pycontrails/: __init__.py
pycontrails/core/: __init__.py  ads_b.py  adsb.py  aircraft_performance.py  aircraft_spec.py  airports.py  cache.py  coordinates.py  datalib.py  fleet.py  flight.py  flightplan.py  fuel.py  interpolation.py  met.py  met_var.py  models.py  polygon.py  rgi_cython.pyx  vector.py
pycontrails/datalib/: __init__.py  ch-aviation.py  ch_aviation.py  exceptions.py  forecast.py  geo_utils.py  goes.py  google_forecast.py  gruan.py  iagos.py  landsat.py  met_utils.py  sentinel.py  spire.py
pycontrails/datalib/_leo_utils/: correction.py  landsat_metadata.py  search.py  sentinel_metadata.py  vis.py
pycontrails/datalib/_met_utils/: metsource.py
pycontrails/datalib/ads_b/: common.py  spire.py
pycontrails/datalib/dwd/: __init__.py  icon.py  ods.py
pycontrails/datalib/ecmwf/: __init__.py  arco_era5.py  common.py  era5.py  era5_model_level.py  hres.py  hres_model_level.py  ifs.py  model_level_era5.py  model_level_hres.py  model_levels.py  variables.py
pycontrails/datalib/gfs/: __init__.py  gfs.py  variables.py
pycontrails/datalib/himawari/: __init__.py  header_struct.py  himawari.py
pycontrails/datalib/leo/: __init__.py  landsat.py  search.py  sentinel.py  utils.py  vis.py
pycontrails/datalib/leo_utils/: __init__.py  correction.py  landsat_metadata.py  search.py  sentinel_metadata.py
pycontrails/datalib/spire/: __init__.py  data_cleaning.py  exceptions.py  separate_flights.py  spire.py
pycontrails/ext/: bada.py  cirium.py  empirical_grid.py  synthetic_flight.py
pycontrails/ext/bada/: __init__.py
pycontrails/ext/cirium/: __init__.py
pycontrails/models/: __init__.py  accf.py  aircraft_performance.py  dry_advection.py  extended_k15.py  humidity_scaling.py  issr.py  pcc.py  pcr.py  sac.py  tau_cirrus.py
pycontrails/models/apcemm/: __init__.py  adapter.py  apcemm.py  input.py  inputs.py  interface.py  utils.py
pycontrails/models/boxm/: J.pkl  chemco.py  photol.py  test.py  zenith copy.py  zenith.py
pycontrails/models/cocip/: __init__.py  cocip.py  cocip_params.py  cocip_uncertainty.py  contrail_properties.py  output_formats.py  radiative_forcing.py  radiative_heating.py  unterstrasser_wake_vortex.py  wake_vortex.py  wind_shear.py
pycontrails/models/cocipgrid/: __init__.py  cocip_grid.py  cocip_grid_params.py  cocip_time_handling.py
pycontrails/models/emissions/: __init__.py  black_carbon.py  emissions.py  ffm2.py  gaseous.py  nvpm.py  nvpm_meem2.py  vpm.py
pycontrails/models/humidity_scaling/: __init__.py  humidity_scaling.py
pycontrails/models/libradtran/: clouds.py  cocip_input.py  contrail_input.py  libradtran.py  (+4 more)
pycontrails/physics/: __init__.py  constants.py  geo.py  jet.py  thermo.py  units.py
pycontrails/utils/: __init__.py  array.py  concurrent.py  coroutines.py  dependencies.py  iteration.py  json.py  synthetic_flight.py  temp.py  types.py
runs/: emissions.ipynb
tests/: __init__.py  _deprecated.py
tests/fixtures/: cocip-met.py  cocip-met2.py  ecmwf-met.py  gfs-met.py
tests/unit/: __init__.py  conftest.py  test_accf.py  test_airports.py  test_apcemm.py  test_cache.py  test_ch_aviation.py  test_cocip.py  test_cocip_grid.py  test_cocip_grid_parity.py  test_cocip_radiative_forcing.py  test_cocip_uncertainty.py  test_coordinates.py  test_coroutines.py  test_datalib.py  test_datalib_metsource.py  test_dry_advection.py  test_dtypes.py  test_dwd.py  test_ecmwf.py  test_emissions.py  test_fleet.py  test_flight.py  test_flightplan.py  test_forecast.py  test_fuel.py  test_geo.py  test_gfs.py  test_goes.py  test_google_forecast.py  test_grid_to_netcdf.py  test_gruan.py  test_himawari.py  test_humidity_scaling.py  test_init.py  test_interpolation.py  test_leo.py  test_met.py  test_met_cache.py  test_met_utils.py  (+16 more)
(+2300 files in other folders)
